syntax = "proto3";

option go_package = ".;app";

package app;

enum RunMode {
  dev = 0;
  test = 1;
  stag = 2;
  prod = 3;
  release = 4;
  unknown = 5;
}