syntax = "proto3";

package yuque.v2;

option go_package = "./;yuquepb";

import "google/api/annotations.proto";
import "lava/resty.proto";
import "lava/tags.proto";
import "google/api/client.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "www.yuque.com",
  base_path:"/api/v2",
  info: {
    title: "yuque restful api interface";
    version: "2.0";
    contact: {
      name: "barry";
      url: "https://github.com/kooksee";
      email: "kooksee@163.com";
    };
    license: {
      name: "Apache 2.0 License";
    };
  };
  external_docs: {
    url: "https://www.yuque.com/yuque/developer/api";
  }
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  responses: {
    key: "200";
    value: {
      description: "成功";
    }
  }
  responses: {
    key: "400";
    value: {
      description: "请求的参数不正确，或缺少必要信息，请对比文档";
    }
  }
  responses: {
    key: "401";
    value: {
      description: "需要用户认证的接口用户信息不正确";
    }
  }
  responses: {
    key: "403";
    value: {
      description: "缺少对应功能的权限";
    }
  }
  responses: {
    key: "404";
    value: {
      description: "数据不存在，或未开放";
    }
  }
  responses: {
    key: "500";
    value: {
      description: "服务器异常";
    }
  }
};

service Yuque {
  option (google.api.default_host) = "www.yuque.com";
  option (lava.resty).enable = true;

  // 获取认证的用户的个人信息
  rpc UserInfo (google.protobuf.Empty) returns (UserInfoResp) {
    option (google.api.http) = {
      get: "/user"
    };
  }

  // 获取单个用户信息
  rpc UserInfoByLogin (UserInfoReq) returns (UserInfoResp) {
    option (google.api.http) = {
      get: "/users/{login}"
    };
  }

  // 创建 Group
  rpc CreateGroup (CreateGroupReq) returns (CreateGroupResp) {
    option (google.api.http) = {
      post: "/groups"
      body: "*"
    };
  }
}

// doorman service config
message DoormanConfig {
  // gRPC port
  uint32 grpc_port = 1;
  // websocket port
  uint32 wss_port = 2;
}

// facebook auth configuration
message FacebookConfig {
  string base_url = 1;
  string auth_url = 2;
  string avatar_url = 3;
}

// guardian service config
message GuardianConfig {
  // auth token secret
  string token_secret = 1;
  // auth db conn str
  string conn_str = 2;
  // auth token expiration
  uint32 expiring_days = 3;
  // facebook configuration
  FacebookConfig facebook = 4;
}

service UserService {
  option (lava.resty).enable = true;

  // user signin
  rpc Signin(UserInfoReq) returns (UserInfoResp) {
    option (google.api.http) = {
      post : "/api/v1/users/signin/{login}"
      body : "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary : "User signin"
      description : "Sign in a user by using an auth provider"
      tags : "Users"
    };
  }

  rpc Signin1(UserInfoReq) returns (UserInfoResp) {
    option (google.api.http) = {
      get : "/api/v1/users/signin/{login}"
    };
  }

  // user resets password
  rpc ResetPassword(UserInfoReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/api/v1/users/reset_password"
      body : "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary : "User reset password"
      description : "Reset password for users. For first time setting "
          "password, old password should be empty string"
      tags : "Users"
      security : {
        security_requirement : {
          key : "ApiKey";
          value : {}
        }
      }
    };
  }
}

// basic user information
message User {
  // user id
  string id = 1;
  // user's email
  string email = 2;
  // user's first name
  string first_name = 3;
  // user's last name
  string last_name = 4;
  // user's gender - Unspecified if none
  string gender = 5;
  // user's birthday in UTC timestamp, 0 if none
  int64 birthday = 6;
  // user's avatar
  string avatar = 7;
}

message CreateGroupResp {
  message Data {
    uint32 id = 1;
    string login = 2;
    string name = 3;
    string avatar_url = 4;
    string description = 5;
    string created_at = 6;
    string updated_at = 7;
  }

  repeated Data data = 1;
  lava.Response response = 2;
}

message CreateGroupReq {
  // login
  string login = 1;

  // 组织名称
  string name = 2;

  // 介绍
  string description = 3;
}

message UserInfoResp {
  message Data {
    uint32 id = 1;
    string type = 2;
    string login = 3;
    string name = 4;
    string description = 5;
    string avatar_url = 6;
    string created_at = 7;
    string updated_at = 8;
  }

  Data data = 1;
  lava.Response response = 2;
}

message UserInfoReq {
  // login or id
  string login = 1 [
    (lava.tags) = {key:"param",value:"login"},
    (lava.tags) = {key:"param1",value:"login1"}
  ];
}
